--- a/src/app/login/login/login.component.html
+++ b/src/app/login/login/login.component.html
@@ -21,10 +21,10 @@
                         <input type="password" autocomplete="off" name="usuario">
                     </label>
                 </div>
-                
+
             </div>
             <section class="buttonSection">
-                <button type="button" class="btn btn-primary">
+                <button [routerLink]="['/desembolsos']" type="button" class="btn btn-primary">
                     INGRESAR
                 </button>
             </section>
@@ -37,4 +37,3 @@
     </div>
 
 </div>
-
